<resources>
    <string name="app_name">RL CHAT</string>
    <string name="main">Main</string>
    <string name="welcome_to_rl_chat_app">Welcome to RL Chat App</string>
    <string name="main_page">Main PAGE</string>
    <string name="need_a_new_account">NEED A NEW ACCOUNT ?</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_display_name">Display Name</string>
    <string name="hi_there">Hi there</string>
    <string name="change_image">CHANGE IMAGE</string>
    <string name="change_status">CHANGE STATUS</string>
    <string name="your_status">Your status</string>
    <string name="user_single_display_name">Display Name</string>
    <string name="user_default_status">User default status</string>
</resources>
